--- a/public/stylesheets/less/rp-toast.less
+++ b/public/stylesheets/less/rp-toast.less
@@ -1,6 +1,10 @@
 .rp-toast {
 
     // background-color: white !important;
+
+    .rp-material-icon {
+        max-width: 36px !important;
+    }
 }
 .rp-toast-text {
 
